# chainlink-terra-cosmwasm-contracts

./: .gitignore  Cargo.toml  NOTICE  README.md
.cargo/: config
.github/workflows/: Basic.yml
artifacts/: access_controlled_aggregator.wasm  aggregator.wasm  aggregator_proxy.wasm  chainlink_client.wasm  checksums.txt  consumer.wasm  cw20_base.wasm  deviation_flagging_validator.wasm  eac_aggregator_proxy.wasm  flags.wasm  flux_aggregator.wasm  link_token.wasm  oracle.wasm  owned.wasm
contracts/access-controlled-aggregator/: Cargo.toml  README.md
contracts/access-controlled-aggregator/examples/: schema.rs
contracts/aggregator/: Cargo.toml  README.md
contracts/aggregator-proxy/: Cargo.toml  README.md
contracts/aggregator-proxy/examples/: schema.rs
contracts/aggregator-proxy/schema/: execute_msg.json  handle_msg.json  init_msg.json  instantiate_msg.json  query_msg.json
contracts/aggregator-proxy/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/aggregator-proxy/tests/: helpers.rs  integration.rs
contracts/aggregator/examples/: schema.rs
contracts/chainlink-client/: Cargo.toml  README.md
contracts/chainlink-client/examples/: schema.rs
contracts/chainlink-client/tests/: integration.rs
contracts/chainlink-contract-utils/: Cargo.toml
contracts/chainlink-contract-utils/src/: modifier.rs
contracts/consumer/: Cargo.toml  README.md
contracts/consumer/examples/: schema.rs
contracts/consumer/schema/: execute.json  instantiate.json  query.json  res.json  response.json  state.json
contracts/consumer/src/: lib.rs
contracts/cw677-token/: Cargo.toml  README.md
contracts/cw677-token/examples/: schema.rs
contracts/deviation-flagging-validator/: Cargo.toml  README.md
contracts/deviation-flagging-validator/examples/: schema.rs
contracts/deviation-flagging-validator/schema/: execute_msg.json  handle_msg.json  init_msg.json  instantiate_msg.json  query_msg.json  state.json
contracts/deviation-flagging-validator/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/eac-aggregator-proxy/: Cargo.toml  README.md
contracts/eac-aggregator-proxy/examples/: schema.rs
contracts/flags/: Cargo.toml  README.md
contracts/flags/examples/: schema.rs
contracts/flags/schema/: execute_msg.json  handle_msg.json  init_msg.json  instantiate_msg.json  query_msg.json
contracts/flags/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/flux-aggregator/: Cargo.toml  README.md
contracts/flux-aggregator/examples/: schema.rs
contracts/flux-aggregator/schema/: config.json  config_response.json  execute_msg.json  funds.json  handle_msg.json  init_msg.json  instantiate_msg.json  oracle_round_state_response.json  oracle_status.json  query_msg.json  requester.json  round.json  round_data_response.json  round_details.json
contracts/flux-aggregator/src/: contract.rs  error.rs  integration_tests.rs  lib.rs  msg.rs  state.rs
contracts/flux-aggregator/tests/: helpers.rs  integration.rs
contracts/link-token/: Cargo.toml  README.md
contracts/link-token/examples/: schema.rs
contracts/link-token/schema/: execute_msg.json  handle_msg.json  init_msg.json  query_msg.json  token_info.json
contracts/link-token/src/: contract.rs  lib.rs  msg.rs  state.rs
contracts/link-token/src/integration_tests/: mod.rs  receiver_mock.rs
contracts/link-token/tests/: integration.rs
contracts/oracle/: Cargo.toml  README.md
contracts/oracle-consumer/: Cargo.toml  NOTICE  README.md
contracts/oracle-consumer/examples/: schema.rs
contracts/oracle/examples/: schema.rs
contracts/oracle/schema/: handle_msg.json  init_msg.json  query_msg.json  state.json
contracts/oracle/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/owned/: Cargo.toml  README.md
contracts/owned/examples/: schema.rs
contracts/owned/schema/: execute_msg.json  handle_msg.json  query_msg.json  state.json
contracts/owned/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/owned/tests/: integration.rs
contracts/simple-write-access-controller/: Cargo.toml
contracts/simple-write-access-controller/examples/: schema.rs
contracts/simple-write-access-controller/schema/: execute_msg.json  query_msg.json  state.json
contracts/simple-write-access-controller/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/utils/: Cargo.toml
contracts/utils/src/: lib.rs  median.rs
scripts/: optimize.sh
