[package]
name = "aggregator-proxy"
version = "0.1.0"
authors = ["Milen Radkov <milenradkov@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0"}
cw-storage-plus = { version = "0.8.0" }
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }
owned = { path = "../owned", default-features = false, features = ["library"] }
chainlink-aggregator = { path = "../../packages/chainlink-aggregator" }
flux-aggregator = { path="../flux-aggregator", default-features = false}
link-token = { path = "../link-token", default-features = false }
deviation-flagging-validator = { path = "../deviation-flagging-validator", default-features = false }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
cw-multi-test = { version = "0.8.0" }
