[package]
name = "consumer"
version = "0.1.0"
authors = ["12e31d91 <milen@kartof.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
cw-storage-plus = "0.8.0"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
fadroma   = { git = "https://github.com/hackbg/fadroma", branch = "feature/terra-support", features=["terra-contract"]}
aggregator-proxy = { path = "../aggregator-proxy", default-features = false }
chainlink-aggregator = { path = "../../packages/chainlink-aggregator" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
