[package]
name = "deviation-flagging-validator"
version = "0.1.0"
authors = ["denis <denismaximov98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["singlepass"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
singlepass = ["cosmwasm-vm/default-singlepass"]

[dependencies]
cosmwasm-std = { version = "0.10.1" }
cosmwasm-storage = { version = "0.10.1" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
thiserror = { version = "1.0.24"}
owned = { path = "../owned", default-features = false, features = ["library"] }
flags = { path = "../flags", default-features = false }

[dev-dependencies]
cosmwasm-schema = { version = "0.10.1" }
cosmwasm-vm = { version = "0.10.1", default-features = false }