[package]
name = "deviation-flagging-validator"
version = "0.1.0"
authors = ["denis <denismaximov98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.16.0", default-features = false }
cosmwasm-storage = { version = "0.16.0", default-features = false }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }
cw-storage-plus = "0.8.0"
owned = { path = "../owned", default-features = false, features = ["library"] }
flags = { path = "../flags", default-features = false, features = ["library"] }


[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
