[package]
name = "flux-aggregator"
version = "0.1.0"
authors = ["Milen Radkov <milenradkov@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.15.0" }
cosmwasm-storage = { version = "0.15.0" }
cw-storage-plus = { version = "0.7.0", features = ["iterator"] }
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }
cw20 = { version = "0.7.0" }
link-token = { path = "../link-token", default-features = false }
owned = { path = "../owned", default-features = false, features = ["library"] }
deviation-flagging-validator = { path = "../deviation-flagging-validator", default-features = false }
utils = { path = "../utils" }
chainlink-aggregator = { path = "../../packages/chainlink-aggregator" }

[dev-dependencies]
cosmwasm-schema = { version = "0.15.0" }
cw-multi-test = { version = "0.7.0" }
