[package]
name = "link-token"
version = "0.1.0"
authors = ["Milen Radkov <milenradkov@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# default = ["singlepass"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
# singlepass = ["cosmwasm-vm/default-singlepass"]

[dependencies]
cosmwasm-std = { version = "0.14.0" }
cosmwasm-storage = { version = "0.14.0" }
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
cw20 = { version = "0.6.0" }
cw20-base = { version = "0.6.0", features = ["library"] }
cw-storage-plus = { version = "0.6.0", features = ["iterator"] }

[dev-dependencies]
cosmwasm-schema = { version = "0.14.0" }
cosmwasm-vm = { version = "0.14.0" }
cw-multi-test = { version = "0.6.0" }
