[package]
name = "oracle"
version = "0.1.0"
authors = ["Milen Radkov <milenradkov@me.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.10.1" }
cosmwasm-storage = { version = "0.10.1" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
cw0 = { version = "0.2.3" }
thiserror = { version = "1.0.24" }
link-token = { path = "../link-token", default-features = false }
owned = { path = "../owned", default-features = false, features = ["library"] }

[dev-dependencies]
cosmwasm-schema = { version = "0.10.1" }
