[package]
name = "utils"
version = "0.1.0"
authors = ["Nikolay Zaharov <nzaharov988@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
num-traits = { version="0.2.14", default-features = false }
